7783
That's because the signature of toArray changed (from ClassManifest to ClassTag in the context bound.) This is a violation of deprecation policy.  The original toArray has to be retained for 2.10 to adhere to the rules.  And you can't overload them at present:
{code}
<console>:10: error: ambiguous reference to overloaded definition,
both method f1 in class Bippy of type [T](implicit evidence$2: ClassManifest[T])Int
and  method f1 in class Bippy of type [T](implicit evidence$1: scala.reflect.ClassTag[T])Int
match expected type ?
              res0.f1
                   ^
{code}
But that should be fixable with different implicit placement.
